--- a/problem-3/client/package.json
+++ b/problem-3/client/package.json
@@ -7,7 +7,8 @@
     "babel-loader": "^7.0.0",
     "html-webpack-plugin": "^2.28.0",
     "webpack": "^2.6.1",
-    "webpack-dev-server": "^2.4.5"
+    "webpack-dev-server": "^2.4.5",
+    "lodash": ">=4.17.11"
   },
   "scripts": {
     "start": "webpack-dev-server",
